<resources>
    <string name="app_name">ANMP 160419098</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="history_fragment">History Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="level">Level</string>
    <string name="mathematics_operations">Mathematics Operations</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string-array name="level">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>
